# reach-for-the-stars

./: .gitignore  Cargo.toml  LICENSE  Pipfile  README.md  deny.toml
.github/workflows/: ci.yml  harness-daily.yml  reach-for-the-stars.yml
assets/data/: stars.json
harness/: .gitignore  Cargo.toml  README.md  age-recipient.txt  config-prod.toml  config.example.toml  flake.nix  sign-pubkey.hex
harness/scripts/: bootstrap.sh
harness/src/: config.rs  lib.rs  main.rs  secrets.rs
harness/src/browser/: canary.rs  cdp.rs
harness/src/commands/: export.rs  mod.rs  run.rs  seed.rs  verify.rs
harness/src/stores/: git_branch.rs  github_release.rs  mod.rs  s3.rs
harness/tests/: smoke.rs
scripts/: star_scraper.py
src/: github.rs  hash.rs  io.rs  main.rs  model.rs  sync.rs
tests/: test_star_scraper.py
