[package]
name = "reach-stars"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
description = "Export GitHub stargazers to a JSON envelope with incremental sync and periodic reconcile."
repository = "https://github.com/PhysShell/reach-for-the-stars"
homepage = "https://github.com/PhysShell/reach-for-the-stars"
documentation = "https://github.com/PhysShell/reach-for-the-stars"
readme = "README.md"
keywords = ["github", "stars", "exporter", "cli"]
categories = ["command-line-utilities"]
publish = false

[[bin]]
name = "reach-stars"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive", "env"] }
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
time = { version = "0.3", features = ["formatting", "macros", "parsing", "serde", "serde-well-known"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "io-util", "net", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = { version = "2", features = ["serde"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

[lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"
# Binary-only crate: `unreachable_pub` is irrelevant here because nothing
# outside the bin can import these items.
unreachable_pub = "allow"
missing_debug_implementations = "warn"
rust_2018_idioms = { level = "deny", priority = -1 }
future_incompatible = { level = "deny", priority = -1 }
nonstandard_style = { level = "deny", priority = -1 }

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Hard bans on footguns and lazy panics
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
print_stderr = "deny"
mem_forget = "deny"
exit = "deny"
indexing_slicing = "warn"

# Pedantic lints we deliberately allow because they catch style, not bugs.
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
multiple_crate_versions = "allow"
similar_names = "allow"
items_after_statements = "allow"
single_match_else = "allow"
if_not_else = "allow"
match_wildcard_for_single_variants = "allow"
struct_excessive_bools = "allow"
too_many_lines = "allow"
needless_pass_by_value = "allow"
return_self_not_must_use = "allow"
uninlined_format_args = "allow"
doc_markdown = "allow"
missing_const_for_fn = "allow"
